Shopyy is now Version 1.2 Beta
- Prompt when discarding changes added
- Image from Camera now has Crop Features. But image taken is save locally.
- Fixed some bugs

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -55,7 +55,7 @@
                         android:layout_below="@+id/pic1"
                         android:gravity="center"
 
-                        android:text="@string/version_1_0"
+                        android:text="@string/app_version"
                         android:textColor="@color/gray1"
                         android:textSize="14sp"
                         android:textStyle="bold" />
