--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="fab_col1">@color/primary_col</color>
     <color name="fab_col2">#11c1f7</color>
     <color name="fab_col3">#ffcc54</color>
+    <color name="fab_col4">#d6d2d2</color>
 
     <color name="del_col">#FF3D00</color>
     <color name="temp1">#F9CE22</color>
